# SGD_for_Depth

./: .gitignore  README.md  tatus
network_model_check/: check.py  data.py  results.txt
resources/: load_jsons.py
resources/jsons/: ir_1.json  ir_10.json  ir_11.json  ir_12.json  ir_13.json  ir_14.json  ir_15.json  ir_16.json  ir_17.json  ir_18.json  ir_19.json  ir_2.json  ir_20.json  ir_21.json  ir_22.json  ir_23.json  ir_24.json  ir_25.json  ir_26.json  ir_27.json  ir_28.json  ir_29.json  ir_3.json  ir_30.json  ir_31.json  ir_32.json  ir_33.json  ir_34.json  ir_35.json  ir_36.json  ir_37.json  ir_38.json  ir_39.json  ir_4.json  ir_40.json  ir_5.json  ir_6.json  ir_7.json  ir_8.json  ir_9.json  (+2 more)
src/: sgd.cpp  sgd.h
tensorflow/: CNN_trainin.py  JSON_Model.json  jsonifyModel.py  latest_model.h5  mins_from_skratch.py  model_checkpoint.ckpt.data-00000-of-00001  model_checkpoint.ckpt.index  terminal_output.txt  testEvaluate.cpp  testEvaluate.py
tensorflow/checkpoints/: checkpoint  my_checkpoint-20220404-185619.data-00000-of-00001  my_checkpoint-20220404-185619.index  my_checkpoint-20220405-090418.data-00000-of-00001  my_checkpoint-20220405-090418.index  my_checkpoint-20220405-100502.data-00000-of-00001  my_checkpoint-20220405-100502.index  my_checkpoint-20220405-111049.index  my_checkpoint-20220405-111254.data-00000-of-00001  my_checkpoint-20220417-150829.data-00000-of-00001  my_checkpoint-20220417-150829.index  my_checkpoint-20220601-201948.data-00000-of-00001  (+3 more)
tensorflow_cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  THIRD_PARTY_TF_C_LICENSES  cmake_install.cmake  example  hello_tf  main.cpp
(+331 files in other folders)
